admin dashboard updated with sidemenus

--- a/src/pages/User-Pages/Team/Tree.scss
+++ b/src/pages/User-Pages/Team/Tree.scss
@@ -60,7 +60,7 @@
   }
 
   .accordion-summary {
-    background-color: #7e22ce!important;
+    background-color: #042f2e !important;
     color: #fff !important;
     .MuiSvgIcon-root {
       color: #fff;
