--- a/src/pages/Sidebar/sidebar.scss
+++ b/src/pages/Sidebar/sidebar.scss
@@ -1,7 +1,7 @@
 .sidebar {
   width: 250px;
   height: 100%;
-  background-color: #7e22ce;
+  background-color: #042f2e ;
   color: #fff;
   position: fixed;
   transition: transform 0.3s ease-in-out;
@@ -36,7 +36,7 @@
   padding-left: 20px;
   margin-top: 5px;
   overflow: hidden;
-  background-color: #9333ea;
+  background-color: #059669;
 }
 
 .sub-items a {
@@ -49,10 +49,10 @@
   transition: color 0.3s ease;
 
   &:hover {
-    color: #99f6e4;
+    color: #2ee349;
   }
   &.selected {
-    color: #99f6e4;
+    color: #2ee349;
   }
 }
 
@@ -77,11 +77,11 @@
 }
 
 .menu-item:hover {
-  color: #99f6e4;
+  color: #2ee349;
 }
 
 .menu-item.selected {
-  background-color: #c084fc  ;
+  background-color: #059669  ;
   color: #fff;
 }
 
