new theme and usedash board added

--- a/src/pages/Sidebar/sidebar.scss
+++ b/src/pages/Sidebar/sidebar.scss
@@ -36,7 +36,7 @@
   padding-left: 20px;
   margin-top: 5px;
   overflow: hidden;
-  background-color: #166534;
+  background-color: #085554b5;
 }
 
 .sub-items a {
@@ -81,7 +81,7 @@
 }
 
 .menu-item.selected {
-  background-color: #166534  ;
+  background-color: #085554b5  ;
   color: #fff;
 }
 
