--- a/src/pages/Sidebar/sidebar.scss
+++ b/src/pages/Sidebar/sidebar.scss
@@ -1,21 +1,25 @@
 .sidebar {
   width: 250px;
   height: 100%;
-  background-color: #042f2e ;
+  background-color: #042f2e;
   color: #fff;
   position: fixed;
   transition: transform 0.3s ease-in-out;
+  overflow: hidden;
 }
 
 .sidebar.open {
   transform: translateX(0);
-  transition: transform 0.3s ease-in-out; 
+  transition: transform 0.3s ease-in-out;
 }
 
 .sidebar.closed {
   transform: translateX(-100%);
-  transition: transform 0.3s ease-in-out; 
+  transition: transform 0.3s ease-in-out;
+  visibility: hidden;
+  pointer-events: none;
 }
+
 ::-webkit-scrollbar {
   display: none;
 }
@@ -51,6 +55,7 @@
   &:hover {
     color: #33b1ff;
   }
+
   &.selected {
     color: #33b1ff;
   }
@@ -81,7 +86,7 @@
 }
 
 .menu-item.selected {
-  background-color: #085554b5  ;
+  background-color: #085554b5;
   color: #fff;
 }
 
@@ -89,4 +94,13 @@
   margin-right: 10px;
   font-size: 20px;
   color: inherit;
+}
+
+/* Mobile Responsive Styles */
+@media screen and (max-width: 900px) {
+  .sidebar.open {
+    position: fixed;
+    z-index: 1200;
+    box-shadow: 4px 0 20px rgba(0, 0, 0, 0.3);
+  }
 }
